[package]
name = "thundersteel"
version = "0.1.0"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
rayon = "1.3.1"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.8"
clap = "2.33.3"
